Fixes layout issues

--- a/client/main.less
+++ b/client/main.less
@@ -11,14 +11,18 @@
   src: url('/fonts/TradeGothicLTStd-BdCn20.otf');
 }
 
-html, body {
+html {
+	height: 100%;
+}
+
+body {
+	height: unset;
 	min-height: 100%;
 }
 
 #app {
 	width: 100%;
-	// height: 100%;
-	min-height: 100%;
+	min-height: 100vh;
 	display: inline-flex;
 }
 
